--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Cloudoki/cn-hyper-test#readme",
   "dependencies": {
     "async": "^2.0.0-rc.5",
+    "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "leveldown": "^1.4.6",
     "levelup": "^1.3.2",
