--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leveldown": "^1.4.6",
     "levelup": "^1.3.2",
     "sendgrid": "^2.0.0",
-    "supertest": "^1.2.0"
+    "supertest": "^1.2.0",
+    "z-schema": "^3.17.0"
   }
 }
