--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^2.0.0-rc.5",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "handlebars": "^4.0.5",
     "leveldown": "^1.4.6",
     "levelup": "^1.3.2",
     "sendgrid": "^2.0.0",
