--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "handlebars": "^4.0.5",
+    "html-to-text": "^2.1.0",
+    "juice": "^2.0.0",
     "leveldown": "^1.4.6",
     "levelup": "^1.3.2",
+    "lodash": "^4.13.1",
+    "moment-timezone": "^0.5.4",
     "sendgrid": "^2.0.0",
     "supertest": "^1.2.0",
     "z-schema": "^3.17.0"
