--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Code Name Hyper, testing component",
   "main": "bin/www.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bin/www.js",
+    "test": "rimraf coverage && NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- --reporter spec test",
+    "lint": "eslint lib bin test",
+    "debug": "DEBUG=hyper:* npm start"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,8 @@
   "dependencies": {
     "async": "^2.0.0-rc.5",
     "body-parser": "^1.15.1",
+    "config": "^1.21.0",
+    "debug": "^2.2.0",
     "express": "^4.13.4",
     "handlebars": "^4.0.5",
     "html-to-text": "^2.1.0",
@@ -30,6 +35,15 @@
     "sendgrid": "^2.0.0",
     "supertest": "^1.2.0",
     "sway": "^1.0.0",
+    "winston": "^2.2.0",
     "z-schema": "^3.17.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "eslint": "^2.12.0",
+    "istanbul": "^0.4.3",
+    "mocha": "^2.5.3",
+    "mocha-eslint": "^2.1.1",
+    "rimraf": "^2.5.2"
   }
 }
