--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async": "^2.0.0-rc.5",
     "body-parser": "^1.15.1",
     "config": "^1.21.0",
+    "cuid": "^1.3.8",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "handlebars": "^4.0.5",
