--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cn-hyper-test",
-  "version": "0.0.21",
+  "version": "0.1.0",
   "description": "Code Name Hyper, testing component",
   "main": "app.js",
   "scripts": {
@@ -21,23 +21,19 @@
   "homepage": "https://github.com/Cloudoki/cn-hyper-test#readme",
   "dependencies": {
     "async": "^2.0.0-rc.5",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.1",
-    "config": "^1.21.0",
     "cuid": "^1.3.8",
-    "debug": "^2.2.0",
     "express": "^4.13.4",
     "handlebars": "^4.0.5",
     "html-to-text": "^2.1.0",
     "juice": "^2.0.0",
-    "leveldown": "^1.4.6",
-    "levelup": "^1.3.2",
+    "level": "^1.4.0",
     "lodash": "^4.13.1",
     "moment-timezone": "^0.5.4",
+    "request-promise-native": "^1.0.3",
     "sendgrid": "^2.0.0",
-    "supertest": "^1.2.0",
-    "sway": "^1.0.0",
-    "winston": "^2.2.0",
-    "z-schema": "^3.17.0"
+    "sway": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
