--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "hapi": "^15.2.0",
     "inert": "^4.0.2",
     "joi": "^9.2.0",
-    "mongodb": "^2.2.11",
-    "mongoose": "^4.6.8"
+    "lodash": "^4.17.2",
+    "mongoose": "^4.6.8",
+    "mustache": "^2.3.0",
+    "swagger-parser": "^3.4.1"
   },
   "devDependencies": {},
   "scripts": {
