--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "boom": "^4.2.0",
     "bunyan": "^1.8.5",
     "dredd": "^2.2.3",
+    "handlebars": "^4.0.6",
     "hapi": "^15.2.0",
+    "html-to-text": "^2.1.3",
     "inert": "^4.0.2",
     "joi": "^9.2.0",
+    "juice": "^4.0.2",
     "lodash": "^4.17.2",
+    "moment-timezone": "^0.5.10",
     "mongoose": "^4.6.8",
     "mustache": "^2.3.0",
+    "sendgrid": "^4.7.1",
     "swagger-parser": "^3.4.1"
   },
   "devDependencies": {},
