--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "inert": "^4.0.2",
     "joi": "^9.2.0",
     "juice": "^4.0.2",
+    "kue": "^0.11.5",
     "lodash": "^4.17.2",
     "moment-timezone": "^0.5.10",
     "mongoose": "^4.6.8",
