--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "async": "^2.1.4",
     "boom": "^4.2.0",
     "bunyan": "^1.8.5",
     "dredd": "^2.2.3",
@@ -13,6 +14,7 @@
     "html-to-text": "^2.1.3",
     "inert": "^4.0.2",
     "joi": "^9.2.0",
+    "joi-objectid": "^2.0.0",
     "juice": "^4.0.2",
     "kue": "^0.11.5",
     "lodash": "^4.17.2",
