--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dredd-transactions": "^3.0.1",
     "handlebars": "^4.0.6",
     "hapi": "^15.2.0",
+    "hapi-swagger": "^7.5.0",
     "html-to-text": "^2.1.3",
     "inert": "^4.0.2",
     "joi": "^9.2.0",
@@ -22,7 +23,8 @@
     "mongoose": "^4.6.8",
     "mustache": "^2.3.0",
     "sendgrid": "^4.7.1",
-    "swagger-parser": "^3.4.1"
+    "swagger-parser": "^3.4.1",
+    "vision": "^4.1.1"
   },
   "devDependencies": {},
   "scripts": {
